force-app/main/default/objects/PPSTN_User_COR_Restrictions__c/PPSTN_User_COR_Restrictions__c.object-meta.xml
<CustomObject>
    <label>PPSTN_User_COR_Access_Restriction</label>
    <nameField>
        <displayFormat>UCOR-R-{00000}</displayFormat>
        <label>PPSTN_User_COR_Restrictions</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPSTN_User_COR_Access_Restrictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>