force-app/main/default/objects/PPSTN_User_COR_Restrictions__c/fields/AccessLevel__c.field-meta.xml
<CustomField>
    <fullName>AccessLevel__c</fullName>
    <label>AccessLevel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>