force-app/main/default/objects/PPSTN_User_COR_Restrictions__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU</fullName>
            </value>
            <value>
                <fullName>NZ</fullName>
            </value>
            <value>
                <fullName>GE</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>