force-app/main/default/objects/PPSTN_User_COR_Restrictions__c/fields/License_Type_SF__c.field-meta.xml
<CustomField>
    <fullName>License_Type_SF__c</fullName>
    <label>License_Type_SF</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASIC</fullName>
            </value>
            <value>
                <fullName>FCA</fullName>
            </value>
            <value>
                <fullName>SCB</fullName>
            </value>
            <value>
                <fullName>BAFIN</fullName>
            </value>
            <value>
                <fullName>CYSEC</fullName>
            </value>
            <value>
                <fullName>CMA</fullName>
            </value>
            <value>
                <fullName>DFSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>