force-app/main/default/objects/PPSTN_User_COR_Restrictions__c/fields/Pepperstone_User__c.field-meta.xml
<CustomField>
    <fullName>Pepperstone_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pepperstone User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PPSTN_User_COR_Access_Restrictions</relationshipName>
    <type>Lookup</type>
</CustomField>